[metadata]
name = GeoSight

[flake8]
exclude = */docs/*,*/.tox/*,*/.venv/*,.pycharm_helpers/*,*/migrations/*,docs/*,*/__init__.py,scripts/*,deployment/*,django_project/initialize.py,django_project/frontend,*/tests/*,*/azure_auth/*
max-line-length = 79

# E12x continuation line indentation
# E251 no spaces around keyword / parameter equals
# E303 too many blank lines (3)
# F405 name may be undefined, or defined from star imports: module
ignore = E125,E126,E251,E303,F405,W504,W605,F901,D105,DOC105,DOC106,DOC107,DOC203,DOC301,DOC601,DOC603
style = sphinx
skip-checking-short-docstrings = False